# hakkou

./: .clang-format  CMakeLists.txt  README.md  console.py  docker-compose.yml  ota_flash.sh  partition_table.csv  remote_update.py  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
main/: CMakeLists.txt  Kconfig.projbuild  asserts.h  containers.h  controller.cpp  controller.h  defines.h  event.cpp  event.h  fan.h  fsm.h  gui.h  hfreertos.h  internal_types.h  logger.cpp  logger.h  main.cpp  ota.h  platform.h  platform_esp32.cpp  shared.cpp  shared.h  system.h  task_manager.h  tasks.h
main/ext/: nec_ir_remote.cpp  nec_ir_remote.h  timer_u32.h
main/hardware/: bme280.cpp  bme280.h  encoder.h  fan.cpp  fan.h  h_ds18x20.cpp  h_ds18x20.h  heater.cpp  heater.h  lcd.cpp  lcd.h  nec_remote.cpp  nec_remote.h  pid.cpp  pid.h  sht31d.h
main/platform/: platform.h  platform_esp32.cpp
main/services/: http_server.cpp  http_server.h  rest.h  wifi.h
main/services/ble/: ble.h  common.h  gap.h  gatt_svc.cpp  gatt_svc.h
main/states/: main_menu.h
web-debug/: README.md  index.html  package-lock.json  package.json
web-debug/src/: App.vue  main.ts
web-debug/src/assets/: base.css  main.css
web-debug/src/components/: Footer.vue
web-debug/src/router/: index.ts
web-debug/src/views/: ComicView.vue  GUIControl.vue  PageNotFound.vue
www/: index.html
www/assets/: GUIControl.046d34e0.js  GUIControl.abe451c3.css  index.2cea9225.js  index.ca8e556a.css
